:sparkles: feat: Adicionando o exercicio 1 da lista de Array

--- a/Dia8_Atividade_Pratica/package.json
+++ b/Dia8_Atividade_Pratica/package.json
@@ -5,5 +5,15 @@
   },
   "devDependencies": {
     "@types/readline-sync": "^1.4.8"
-  }
+  },
+  "name": "dia8_atividade_pratica",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
